# ndarray

./: .gitignore  .gitmodules  .travis.yml  ArrayAccess_8h.html  ArrayAccess_8h_source.html  ArrayBaseN_8h.html  ArrayBaseN_8h_source.html  ArrayBase_8h.html  ArrayBase_8h_source.html  ArrayRef_8h.html  ArrayRef_8h_source.html  ArrayTraits_8h.html  ArrayTraits_8h_source.html  Array_8h.html  Array_8h_source.html  BinaryOp_8h.html  BinaryOp_8h_source.html  CHANGELOG.md  CMakeLists.txt  Core_8h.html  Core_8h_source.html  ExpressionBase_8h.html  ExpressionBase_8h_source.html  ExpressionTraits_8h.html  ExpressionTraits_8h_source.html  FFTWTraits_8h.html  FFTWTraits_8h_source.html  FourierOps_8h.html  FourierOps_8h_source.html  FourierTraits_8h.html  FourierTraits_8h_source.html  FourierTransform_8h.html  FourierTransform_8h_source.html  LICENSE  LsstLicenseStatement.txt  Manager_8h.html  Manager_8h_source.html  NestedIterator_8h.html  NestedIterator_8h_source.html  README  (+297 more)
cmake/: FindEigen3.cmake  FindFFTW.cmake  FindPybind11.cmake  FindPythonInterp.cmake
doc/: CMakeLists.txt  (+3 more)
include/: CMakeLists.txt  SConscript  meson.build  ndarray.h  ndarray.hpp  ndarray.i  ndarray_fwd.h  ndarray_fwd.hpp
include/lsst/: ndarray.h  ndarray.hpp  ndarray_fwd.h  ndarray_fwd.hpp
include/lsst/ndarray/: Array.h  Array.hpp  ArrayBase.h  ArrayBase.hpp  ArrayBaseN.h  ArrayBaseN.h.m4  ArrayRef.h  ArrayRef.h.m4  ArrayRef.hpp  ArrayRef.hpp.m4  ArrayTraits.h  ArrayTraits.hpp  ExpressionBase.h  ExpressionBase.hpp  ExpressionTraits.h  ExpressionTraits.hpp  Manager.h  Vector.h  Vector.h.m4  Vector.hpp  Vector.hpp.m4  arange.h  arange.hpp  casts.h  casts.hpp  eigen.h  eigen.hpp  eigen_fwd.h  eigen_fwd.hpp  fft.h  fft.hpp  fft_fwd.h  fft_fwd.hpp  formatting.h  formatting.hpp  initialization.h  initialization.hpp  operators.h  operators.h.m4  operators.hpp  (+11 more)
include/lsst/ndarray/detail/: ArrayAccess.h  ArrayAccess.hpp  BinaryOp.h  BinaryOp.hpp  Core.h  Core.hpp  NestedIterator.h  NestedIterator.hpp  StridedIterator.h  StridedIterator.hpp  UnaryOp.h  UnaryOp.hpp  ViewBuilder.h
include/lsst/ndarray/eigen/: ArrayAsEigen.h  ArrayAsEigen.hpp  EigenAsArray.h  EigenAsArray.hpp
include/lsst/ndarray/fft/: FFTWTraits.h  FFTWTraits.h.m4  FFTWTraits.hpp  FFTWTraits.hpp.m4  FourierOps.h  FourierOps.hpp  FourierTraits.h  FourierTraits.hpp  FourierTransform.cc  FourierTransform.h  FourierTransform.hpp
include/lsst/ndarray/python/: PyConverter.h  PyConverter.hpp  Vector.h  Vector.hpp  eigen.h  eigen.hpp  numpy.h  numpy.hpp  ufunctors.h  ufunctors.hpp
include/lsst/ndarray/tables/: Field.h  Layout.h  Row.h  Table.h
include/lsst/ndarray/tables/detail/: Columns.h  FieldInfo.h  Iterator.h  TraitsAccess.h  functional.h
include/ndarray/: Array.h  Array.hpp  ArrayBase.h  ArrayBase.hpp  ArrayBaseN.h  ArrayBaseN.h.m4  ArrayInterfaceN.hpp  ArrayRef.h  ArrayRef.h.m4  ArrayRef.hpp  ArrayRef.hpp.m4  ArrayTraits.h  ArrayTraits.hpp  CompressedPair.hpp  DType.hpp  Dict.hpp  EigenView.h  ExpressionBase.h  ExpressionBase.hpp  ExpressionTraits.h  ExpressionTraits.hpp  IndexVectorTraits.hpp  Manager.h  Manager.hpp  NestedIterator.hpp  StridedIterator.hpp  Vector.h  Vector.h.m4  Vector.hpp  Vector.hpp.m4  any.hpp  arange.h  arange.hpp  bp.h  bp_fwd.h  buildOptions.h.in  casts.h  casts.hpp  common.hpp  converter.h  (+32 more)
include/ndarray/bp/: Array.h  Array.hpp  ArrayRef.h  Vector.h  auto.h  eigen  eigen.h
include/ndarray/bp/auto/: Array.h  Array.h.m4  ArrayRef.h  ArrayRef.h.m4  Vector.h  Vector.h.m4
include/ndarray/bp/eigen/: EigenView.hpp
include/ndarray/converter/: PyConverter.h  PyManager.h  Vector.h  eigen.h  numpy.h  ufunctors.h
include/ndarray/detail/: ArrayAccess.h  ArrayAccess.hpp  ArrayBase_1.hpp  ArrayBase_2.hpp  ArrayImpl.hpp  ArrayRef_1.hpp  ArrayRef_2.hpp  ArrayTraits_1.hpp  ArrayTraits_2.hpp  Array_1.hpp  Array_2.hpp  BinaryOp.h  BinaryOp.hpp  CompressedPair.hpp  Core.h  Core.hpp  IndexVectorTraits.hpp  Iter.hpp  IterImpl.hpp  IterTraits_1.hpp  IterTraits_2.hpp  Iter_1.hpp  Iter_2.hpp  Layout.hpp  NestedIterator.h  NestedIterator.hpp  StridedIterator.h  StridedIterator.hpp  UnaryOp.h  UnaryOp.hpp  ViewBuilder.h  compressed_pair.hpp  index_vector_traits.hpp  layout.hpp  utils.hpp
include/ndarray/eigen/: ArrayAsEigen.hpp  EigenAsArray.hpp  bp.h
include/ndarray/eigen/bp/: Array.h  EigenView.h  Matrix.h  PythonMatrix.h  ReturnInternal.h  auto.h  eigen_to_python.h  return_internal_matrix.h  return_internal_matrix.hpp  specializations.h  squeeze_matrix.h  squeeze_matrix.hpp  to_python.h
include/ndarray/eigen/bp/auto/: Array.h  Array.h.m4  EigenView.h  EigenView.h.m4  Matrix.h  Matrix.h.m4
include/ndarray/expressions/: BulkParallel.hpp  Executor.hpp  Expression.hpp  Sequential.hpp  Strided.hpp
include/ndarray/fft/: FFTWTraits.h  FFTWTraits.h.m4  FFTWTraits.hpp  FFTWTraits.hpp.m4  FourierOps.h  FourierOps.hpp  FourierTraits.h  FourierTraits.hpp  FourierTransform.cc  FourierTransform.h  FourierTransform.hpp
include/ndarray/formatting/: Vector.hpp  types.hpp
include/ndarray/python/: PyConverter.h  PyConverter.hpp  Vector.h  Vector.hpp  eigen.h  eigen.hpp  numpy.h  numpy.hpp  ufunctors.h  ufunctors.hpp
include/ndarray/swig/: PyConverter.h  Vector.h  eigen.h  numpy.h  ufunctors.h
include/ndarray/table/: Field.hpp  Key.hpp  Record.hpp  Schema.hpp  SchemaField.hpp  SchemaWatcher.hpp  Storage.hpp  Table.hpp  common.hpp
include/ndarray/table/detail/: KeyFactory.hpp  RecordImpl.hpp  SchemaDType.hpp  SchemaIter.hpp  SimpleKeyFactory.hpp
include/ndarray/table/types/: Array.hpp
tests/: Array-ef.py  Array.cpp  ArrayImpl.cpp  CMakeLists.txt  Layout.cpp  SConscript  bp_test.py  bp_test_mod.cc  compilation.py  eigen_bp.py  eigen_bp_mod.cc  eigen_bp_test.py  eigen_bp_test_mod.cc  expressions.cpp  formatting.cpp  meson.build  ndarray-bp-mod.cc  ndarray-eigen.cc  ndarray-fft.cc  ndarray-python-mod.cc  ndarray-python.py  ndarray-tables.cc  ndarray.cc  ndarray.py  pybind11_test.py  pybind11_test_mod.cc  python_test.py  python_test_mod.cc  swig_test.py  swig_test_mod.i  test_Array.py  test_compile_failure.py  views.cc  views.cpp
(+137 files in other folders)
