install_headers(
    ['ndarray/Array.hpp',
     'ndarray/common.hpp',
     'ndarray/DType.hpp',
     'ndarray/exceptions.hpp',
     'ndarray/Manager.hpp',
     'ndarray/detail/ArrayBase_1.hpp',
     'ndarray/detail/ArrayBase_2.hpp',
     'ndarray/detail/ArrayImpl.hpp',
     'ndarray/detail/ArrayRef_1.hpp',
     'ndarray/detail/ArrayRef_2.hpp',
     'ndarray/detail/ArrayTraits_1.hpp',
     'ndarray/detail/ArrayTraits_2.hpp',
     'ndarray/detail/Array_1.hpp',
     'ndarray/detail/Array_2.hpp',
     'ndarray/detail/CompressedPair.hpp',
     'ndarray/detail/IndexVectorTraits.hpp',
     'ndarray/detail/Iter.hpp',
     'ndarray/detail/IterTraits_1.hpp',
     'ndarray/detail/IterTraits_2.hpp',
     'ndarray/detail/Layout.hpp',
     'ndarray/detail/utils.hpp',
     'ndarray/formatting/Vector.hpp',
     'ndarray/formatting/types.hpp',
     ]
)
