test_Layout = executable(
    'Layout', 'Layout.cpp',
    include_directories : inc,
)
test('Layout', test_Layout)

test_Array = executable(
    'Array', 'Array.cpp',
    include_directories : inc,
)
test('Array', test_Array)

test_formatting = executable(
    'formatting', 'formatting.cpp',
    include_directories : inc,
)
test('formatting', test_formatting)
