test_Layout = executable(
    'Layout', 'Layout.cpp',
    include_directories : inc,
    link_with : lib
)
test('Layout', test_Layout)

test_Array = executable(
    'Array', 'Array.cpp',
    include_directories : inc,
    link_with : lib
)
test('Array', test_Array)

test_formatting = executable(
    'formatting', 'formatting.cpp',
    include_directories : inc,
    link_with : lib
)
test('formatting', test_formatting)
